--- a/poster/main.css
+++ b/poster/main.css
@@ -3,7 +3,7 @@ body {
     background-color: white;
     font-family: "Neue Haas Regular";
     font-size: 16px;
-
+    margin: 0;
     }
     
     @font-face {
@@ -30,31 +30,71 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        margin: 0;
+
     }
 
     .title-large{
         font-family: "Neue Haas Black";
         font-size: 100px;
         text-transform: uppercase;
+        line-height: 100%;
+        margin: 0;
     }
 
     .row-1{
         display: flex;
         justify-content: space-between;
+        padding: 15px;
+        padding-bottom: 0;
     }
 
     .row-2{
         flex-grow: 1;
         background: black;
         position: relative;
+        /*padding: 15px;*/
     }
 
-     .row-2 img{
+    .row-2--content{
+        width: 100%;
+        height: 100%;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+     .row-2--background{
         position: absolute;
         width: 100%;
-        height:100%;
+        height: 100%;
         object-fit: cover;
     }
+    
+    .row-2--face{
+        position: relative;
+        height: 75%;
+        width: auto;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        opacity: 0%;
+
+    }
+
+    .row-2--content:hover .row-2--face{
+        opacity: 1;
+        transform: translateX(-50%) translateY(-52%);
+        transition: opacity .5s ease, transform .5s ease;
+    }
+
+    .row-3{
+        padding: 15px;
+        padding-top: 0;
+    }
+
 
     .footer-title{
         text-align: center;
@@ -66,9 +106,6 @@ body {
         justify-content: space-between;
         align-items: flex-end;
         gap: 20px;
-    }
-
-    .footer-detail {
     }
 
     .footer-spacer {
