--- a/studio/project1/style.css
+++ b/studio/project1/style.css
@@ -149,3 +149,47 @@ a:hover{
   background-color: black;
   color: papayawhip;
 }
+
+.mover img {
+  height: 100px;
+  float: left;
+  top: 0px;
+  position: absolute;
+  animation: move 11s linear infinite alternate;
+  animation-timing-function: ease-in-out;
+}
+
+/*img:hover {
+  cursor: url("imgs/red-ouch.PNG"), auto;
+}*/
+
+@keyframes move {
+    0%   {
+      top: 0px;
+      left: 0px;
+    }
+    25% {
+      top: 400px;
+      left: 1200px;
+      transform: scaleX(-1);
+    }
+    50%   {
+      top: 200px;
+      left: 0px;
+      transform: scaleX(1);
+
+    }
+    75%   {
+      top: 300px;
+      left: 800px;
+      transform: scaleX(-1);
+
+    }
+
+    100% {
+      top: 400px;
+      left: 0px;
+      transform: scaleX(1);
+
+    }
+}
