--- a/studio/project2/style.css
+++ b/studio/project2/style.css
@@ -7,6 +7,7 @@ body {
     /*margin: .5rem;
     padding: 5px;*/
     font-size: 7rem;
+    overflow-x: hidden;
 }
 
 text {
@@ -170,6 +171,8 @@ p {
     font-size: 2.25rem;
     color: #b76935;
 }
+
+
 
 .filters button {
     font-family: 'Director';
