--- a/studio/project2/style.css
+++ b/studio/project2/style.css
@@ -1,5 +1,5 @@
 html {
-  cursor: url("./assets/imgs/combcursor.png"), auto;
+  cursor: url("./combcursor.png"), auto;
 }
 
 body {
@@ -8,6 +8,7 @@ body {
     padding: 5px;*/
     font-size: 7rem;
     overflow-x: hidden;
+    cursor: url("./combcursor.png"), auto;
 }
 
 text {
@@ -113,137 +114,7 @@ canvas {
     font-style: normal;
 }
 
-.header-1 {
-    display: inline-block; 
-}
-
-.brush-1 {
-    display: inline-block; 
-    width: 275px;
-    rotate: -10deg;
-}
-
-.header-2 {
-    display: inline-block; 
-}
-
-.comb-1 {
-    display: inline-block;  
-    width: 200px;
-}
-
-.header-3 {
-    display: inline-block; 
-}
-
-.comb-2 {
-    display: inline-block;  
-    width: 450px;
-}
-
-.header-4 {
-    display: inline-block;
-}
-
-.comb-3 {
-    display: inline-block;  
-    width: 5.5rem;
-}
-
-.header-5 {
-    display: inline-block; 
-}
-
-p {
-    font-size: 8rem;
-    color: #b76935;
-    margin: 1rem;
-}
-
-/*.filters {
-    grid-column-start: 1;
-    grid-column-end: 8;
-    grid-row-start: 4;
-    grid-row-end: span 1;
-}*/
-
-.subtitle {
-    font-size: 2.25rem;
-    color: #b76935;
-}
-
-
-
-.filters button {
-    font-family: 'Director';
-    font-size: 1rem;
-    border: none;
-    border-radius: 25px;
-    margin: .5rem;
-    padding: 1rem;
-    background-color: white;
-    color: #b76935;
-    letter-spacing: normal;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-
-}
-
-.filters button:hover {
-    letter-spacing: .15rem;
-    transition: ease-out .4s;
-    color: #2A68A5;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-
-}
-
-.filters button:focus {
-    letter-spacing: .15rem;
-    transition: 0.5s;
-    color: #2A68A5;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-}
-
-.drawer-button {
-    font-family: 'Druzhok';
-    font-size: 1rem;
-    border: none;
-    border-radius: 25px;
-    margin: .5rem;
-    padding: 1rem;
-    background-color: white;
-    color: black;
-    letter-spacing: normal;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-
-}
-
-.drawer-content--description{
-    font-family: 'Director';
-    margin: .5rem;
-    letter-spacing: .1rem;
-    font-size: .75rem;
-    color: #b76935;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-
-}
-
-
-.content-container img {
-    width: 300px;
-    display: block;
-    border-radius: 25px;
-    margin: .75rem;
-    transition: .3s ease-in-out;
-    cursor: url("./assets/imgs/combcursor.png"), auto;
-
-  }
-
-/*.content-container:hover{
--webkit-filter: drop-shadow(12px 12px 7px rgba(0, 0, .8, 0.7));
-         filter: drop-shadow(12px 12px 7px rgba(0, 0, .8, 0.7));
-}*/
-
-.content-container img:hover {
+.content-container a:hover {
 animation: shake 1s;
 
 animation-iteration-count: infinite;
@@ -268,19 +139,25 @@ a {
   font-family: 'Druzhok';
   font-size: 5rem;
   letter-spacing: 2rem;
+  cursor: url("./combcursor.png"), auto;
+
 }
 
 a:hover{
   fill: #2A68A5;
+  cursor: url("./combcursor.png"), auto;
 }
 
 a:active{
-  fill: #2A68A5;
+  fill: #2A68A5;      
+  cursor: url("./combcursor.png"), auto;
 }
 
 svg {
-  display:inline-block;  
+  display: inline-block;  
   margin-left:0px;
+  margin-top: 1rem auto;
+  margin-bottom: 1rem auto;
   margin-right:0px;
   padding-left:0px;
   padding-right:0px;
