--- a/lab/assets/style.css
+++ b/lab/assets/style.css
@@ -7,8 +7,7 @@ html{
     height: 100vh;
     cursor: auto;
     margin: auto;
-    transition: ease-in-out 1s;    
-
+    transition: ease-in-out 1s;
 }
 
 body {
@@ -121,7 +120,7 @@ a:active {
     position: absolute;
     animation: move 60s linear infinite alternate;
     animation-timing-function: ease-in-out;
-    animation-delay: 3s;
+    animation-delay: 2s;
     opacity: 1;
     z-index: 1;
 
@@ -137,13 +136,29 @@ a:active {
     position: absolute;
     animation: move 60s linear infinite alternate;
     animation-timing-function: ease-in-out;
-    animation-delay: 6s;
+    animation-delay: 4s;
     opacity: 1;
     z-index: 1;
 
     &:hover {
         animation-play-state: paused;
         }
+}
+
+.sumplay a {
+    float: left;
+    top: 0vh;
+    left: 0vw;    
+    position: absolute;
+    animation: move 60s linear infinite alternate;
+    animation-timing-function: ease-in-out;
+    animation-delay: 6s;
+    opacity: 1;
+    z-index: 1;
+
+    &:hover {
+        animation-play-state: paused;
+      }
 }
 
     @keyframes move {
